// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar should allow for different heights 1`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different heights 2`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different heights 3`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--prominent"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different heights 4`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--prominent-dense"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different heights 5`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--dense"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different heights 6`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--auto"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different theme colors 1`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different theme colors 2`] = `
<div
  class="rmd-app-bar rmd-app-bar--secondary"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different theme colors 3`] = `
<div
  class="rmd-app-bar rmd-app-bar--surface"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow for different theme colors 4`] = `
<div
  class="rmd-app-bar"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow the app bar to be fixed to the top or bottom of the page 1`] = `
<header
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--elevated rmd-app-bar--scrollbar-offset"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow the app bar to be fixed to the top or bottom of the page 2`] = `
<header
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--elevated rmd-app-bar--scrollbar-offset"
  data-testid="app-bar"
/>
`;

exports[`AppBar should allow the app bar to be fixed to the top or bottom of the page 3`] = `
<header
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--fixed rmd-app-bar--bottom rmd-app-bar--elevated rmd-app-bar--scrollbar-offset"
  data-testid="app-bar"
/>
`;

exports[`AppBar should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary"
  data-testid="app-bar"
>
  <h6
    class="rmd-typography rmd-typography--headline-6 rmd-app-bar-title rmd-app-bar-title--no-wrap"
  >
    My Title
  </h6>
</div>
`;

exports[`AppBar should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary custom-class-name"
  data-testid="app-bar"
  style="background-color: orange;"
>
  <h6
    class="rmd-typography rmd-typography--headline-6 rmd-app-bar-title rmd-app-bar-title--no-wrap"
  >
    My Title
  </h6>
</div>
`;

exports[`AppBar should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<header
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--elevated rmd-app-bar--scrollbar-offset"
  data-testid="app-bar"
>
  <h6
    class="rmd-typography rmd-typography--headline-6 rmd-app-bar-title rmd-app-bar-title--no-wrap"
  >
    My Title
  </h6>
</header>
`;

exports[`AppBar should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<header
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--fixed rmd-app-bar--top rmd-app-bar--scrollbar-offset"
  data-testid="app-bar"
>
  <h6
    class="rmd-typography rmd-typography--headline-6 rmd-app-bar-title rmd-app-bar-title--no-wrap"
  >
    My Title
  </h6>
</header>
`;

exports[`AppBar should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<header
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--fixed rmd-app-bar--sticky rmd-app-bar--top rmd-app-bar--elevated"
  data-testid="app-bar"
>
  <h6
    class="rmd-typography rmd-typography--headline-6 rmd-app-bar-title rmd-app-bar-title--no-wrap"
  >
    My Title
  </h6>
</header>
`;

exports[`AppBar should apply the correct styling, HTML attributes, and allow a ref 6`] = `
<header
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--fixed rmd-app-bar--sticky rmd-app-bar--top"
  data-testid="app-bar"
>
  <h6
    class="rmd-typography rmd-typography--headline-6 rmd-app-bar-title rmd-app-bar-title--no-wrap"
  >
    My Title
  </h6>
</header>
`;

exports[`AppBar should apply the correct styling, HTML attributes, and allow a ref 7`] = `
<div
  class="rmd-app-bar rmd-app-bar--primary rmd-app-bar--stacked"
  data-testid="app-bar"
>
  <h6
    class="rmd-typography rmd-typography--headline-6 rmd-app-bar-title rmd-app-bar-title--no-wrap"
  >
    My Title
  </h6>
</div>
`;

exports[`AppBar styling utils should be callback without any arguments 1`] = `"rmd-app-bar rmd-app-bar--primary"`;
